update - 삭제 기능 구현